# LINE_AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_bot.yml
src/: __init__.py  fetcher.py  main.py  notifier.py  summarizer.py
